# chainwatch-pro

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  app.py  openapi.yaml  requirements.txt  test_billing.py
integrations/supabase/: README.md  client.ts
sdks/cpp/: CMakeLists.txt  README.md
sdks/cpp/include/: chainwatch_client.hpp
sdks/cpp/src/: chainwatch_client.cpp  main.cpp
sdks/go/: README.md  go.mod  main.go
sdks/python/: README.md  pyproject.toml
sdks/python/chainwatch/: __init__.py  cli.py  client.py
sdks/python/examples/: basic_scan.py
sdks/python/tests/: test_client.py
sdks/rust/: Cargo.toml  README.md
sdks/typescript/: README.md  package.json
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
src/components/: AddressBadge.tsx  AlertDigestPreview.tsx  KpiCard.tsx  Layout.tsx  MobileBottomNav.tsx  NetworkBackground.tsx  OnboardingTour.tsx  PortfolioRiskDashboard.tsx  SectionTitle.tsx  ThemeToggle.tsx  TransactionTimeline.tsx  UsageAnalytics.tsx
src/hooks/: useLiveAlerts.ts  useLocalStorage.ts  useSettings.ts  useTheme.ts  useUsageCounters.ts  useWatchlistLabels.ts
src/lib/: compliance.ts  constants.ts  contractScan.ts  graphql.ts  pdfReport.ts  portfolio.ts  transactions.ts  types.ts  utils.ts  vaults.ts  watchlist.ts
src/pages/: Alerts.tsx  ApiPlayground.tsx  Compliance.tsx  ContractScanner.tsx  Dashboard.tsx  Docs.tsx  GraphQLPlayground.tsx  Home.tsx  Pricing.tsx  Settings.tsx  Vaults.tsx  Watchlist.tsx  Webhooks.tsx
(+11 files in other folders)
