[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chainwatch-pro"
version = "0.2.0"
description = "Official Python SDK + CLI for ChainWatch Pro (Web3 risk & yield intelligence)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Sebastian Forbes"}]
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
  "typer[all]>=0.12",
  "rich>=13.0",
]

[project.scripts]
chainwatch = "chainwatch.cli:app"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["chainwatch"]
